--- a/chrome/components/one_tabs-bar.css
+++ b/chrome/components/one_tabs-bar.css
@@ -142,7 +142,7 @@ toolbar #firefox-view-button[aria-pressed="true"] .toolbarbutton-icon {
 
 :root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) 
     #tabbrowser-tabs:is([movingtab]) .tabbrowser-tab[selected="true"] .tab-content{
-    outline: 1px solid var(--general-color) !important;
+    outline: 1px solid var(--button-hover-bgcolor) !important;
     outline-offset: -1px !important;
 }
 
@@ -153,7 +153,7 @@ toolbar #firefox-view-button[aria-pressed="true"] .toolbarbutton-icon {
     background-image: linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)), 
                       linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)), 
                       var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
-    background-position: center center !important;
+    background-position: left top, right top, left center !important;
     background-repeat: no-repeat !important;
     background-size: auto auto !important;
 }
